[OTIO] Differentiate between read and write adapters

BUG: 448318